--- a/src/pages/webservPage.html
+++ b/src/pages/webservPage.html
@@ -4,65 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webserv Project</title>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Jersey 25", sans-serif;
-						font-weight: 400;
-						font-style: normal;
-            background-color: #000;
-            color: #ccc;
-            margin: 0;
-            padding: 0;
-						letter-spacing: 1px;
-						font-size: 20px;
-        }
-        header {
-						position: relative;
-						background: url('server.jpg') no-repeat center center;
-						background-size: cover;
-						height: 300px;
-						display: flex;
-						justify-content: center;
-						align-items: center;
-				}
-				header::before {
-						content: "";
-						position: absolute;
-						top: 0;
-						left: 0;
-						right: 0;
-						bottom: 0;
-						background: rgba(0, 0, 0, 0.3);
-						z-index: 1;
-				}
-				header h1 {
-						position: relative;
-						color: #fff;
-						font-size: 60px;
-						text-shadow: 3px 3px 10px #000, -1px -1px 10px #000;
-						z-index: 2;
-				}
-        section {
-					max-width: 1024px;
-					width: 90%;
-					margin: 0px auto;
-					padding: 15px 5px;
-        }
-        h2 {
-            color: #fff;
-        }
-        code {
-            background: #222;
-            padding: 10px;
-            display: block;
-            margin: 10px 0;
-						font-size: 16px;
-						border-radius: 2px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="webservPage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -78,8 +23,8 @@
         <h2>Usage</h2>
         <p>To get started with Webserv, follow these steps:</p>
         <ol>
-						<li>Clone the repository to your local machine:</li>
-						<code>https://github.com/linhtng/Webserv.git</code>
+            <li>Clone the repository to your local machine:</li>
+            <code>https://github.com/linhtng/Webserv.git</code>
             <li>Compile the server:</li>
             <code>make</code>
             <li>Run the server with a configuration file:</li>
