--- a/src/pages/webservPage.html
+++ b/src/pages/webservPage.html
@@ -10,6 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 </head>
 <body>
+	<nav>
+        <ul>
+            <li><a href="webservPage.html">Home</a></li>
+            <li><a href="formPage.html">Form</a></li>
+            <li><a href="uploadPage.html">Upload</a></li>
+        </ul>
+    </nav>
     <header>
         <h1>Welcome to Webserv</h1>
     </header>
