--- a/src/pages/uploadPage.html
+++ b/src/pages/uploadPage.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <title>File Upload</title>
     <link rel="stylesheet" type="text/css" href="uploadPage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 </head>
 <body>
+	<nav>
+        <ul>
+            <li><a href="webservPage.html">Home</a></li>
+            <li><a href="formPage.html">Form</a></li>
+            <li><a href="uploadPage.html">Upload</a></li>
+        </ul>
+    </nav>
     <h1>Please upload a file</h1>
     <form action="/hi" method="post" enctype="multipart/form-data">
         <input type="file" name="file" id="file">
