--- a/src/pages/uploadPage.html
+++ b/src/pages/uploadPage.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     <h1>Please upload a file</h1>
-    <form action="/hi" method="post" enctype="multipart/form-data">
+    <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file" id="file">
         <button type="submit">Upload</button>
     </form>
