add cute error page and default pages

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -2,9 +2,17 @@
 <html>
 	<head>
 		<title>404 NOT FOUND!!!</title>
+		<link rel="stylesheet" type="text/css" href="defaultStyles.css">
 	</head>
 	<body>
-		<h1>404 NOT FOUND!!!</h1>
+
+	<div>
+		<h1>404 NOT FOUND</h1>
+		<pre>
+			/\_/\
+		   ( o.o )
+			> ^ <</pre>
 		<p>We don't have this page</p>
+	</div>
 	</body>
 </html>
