--- a/src/pages/directoryListing.html
+++ b/src/pages/directoryListing.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Directory Listing {{dir_name}}</title>
+	<link rel="stylesheet" type="text/css" href="/defaultStyles.css">
 </head>
 <body>
+	<div>
 	<h1>{{dir_name}}</h1>
 	<ul>
 		{{list_items}}
 	</ul>
+	</div>
 </body>
 </html>
