--- a/src/pages/uploadSuccessPage.html
+++ b/src/pages/uploadSuccessPage.html
@@ -2,9 +2,17 @@
 <html>
 	<head>
 		<title>Upload Success</title>
+		<link rel="stylesheet" type="text/css" href="/defaultStyles.css">
 	</head>
 	<body>
-		<h1>Upload Success</h1>
-		<p>The file has been uploaded successfully.</p>
+		<div>
+			<h1>Upload Success</h1>
+			<pre>
+				/\_/\ 
+			   ( ^.^ ) 
+				> ^ <
+			</pre>
+			<p>The file has been uploaded successfully</p>
+		</div>
 	</body>
 </html>
