--- a/src/pages/421.html
+++ b/src/pages/421.html
@@ -2,9 +2,16 @@
 <html>
 	<head>
 		<title>421 Misdirected Request!!!</title>
+		<link rel="stylesheet" type="text/css" href="defaultStyles.css">
 	</head>
 	<body>
-		<h1>Misdirected Request!!!</h1>
+	<div>
+		<h1>Misdirected Request</h1>
+		<pre>
+			/\_/\
+		   ( o.o )
+			> ^ <</pre>
 		<p>The request was directed at a server that is not able to produce a response. This can be sent by a server that is not configured to produce responses for the combination of scheme and authority that are included in the request URI.</p>
+	</div>
 	</body>
 </html>
