--- a/src/pages/deletePage.html
+++ b/src/pages/deletePage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Send DELETE Request</title>
+	<link rel="stylesheet" type="text/css" href="/defaultStyles.css">
 </head>
 <body>
 
