--- a/src/pages/testPage.html
+++ b/src/pages/testPage.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Test</title>
+	<link rel="stylesheet" type="text/css" href="/defaultStyles.css">
 </head>
 <body>
 	<h1>Test!</h1>
