fix kitty alignment

--- a/src/pages/uploadSuccessPage.html
+++ b/src/pages/uploadSuccessPage.html
@@ -8,10 +8,9 @@
 		<div>
 			<h1>Upload Success</h1>
 			<pre>
-				/\_/\ 
-			   ( ^.^ ) 
-				> ^ <
-			</pre>
+ /\_/\ 
+( ^.^ ) 
+ > ^ <</pre>
 			<p>The file has been uploaded successfully</p>
 		</div>
 	</body>
