add pages, add conf, refractor server

--- a/src/pages/uploadPage.html
+++ b/src/pages/uploadPage.html
@@ -7,13 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-	<nav>
+    <nav>
         <ul>
             <li><a href="webservPage.html">Home</a></li>
             <li><a href="formPage.html">Form</a></li>
             <li><a href="uploadPage.html">Upload</a></li>
+            <li><a href="requestMethod.html">Request Methods</a></li>
         </ul>
     </nav>
     <h1>Please upload a file</h1>
