--- a/src/pages/webservPage.html
+++ b/src/pages/webservPage.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<nav>
@@ -15,6 +16,7 @@
             <li><a href="webservPage.html">Home</a></li>
             <li><a href="formPage.html">Form</a></li>
             <li><a href="uploadPage.html">Upload</a></li>
+            <li><a href="requestMethod.html">Request Methods</a></li>
         </ul>
     </nav>
     <header>
