--- a/src/pages/formPage.html
+++ b/src/pages/formPage.html
@@ -8,15 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<nav>
-			<ul>
-					<li><a href="webservPage.html">Home</a></li>
-					<li><a href="formPage.html">Form</a></li>
-					<li><a href="uploadPage.html">Upload</a></li>
-			</ul>
-		</nav>
+        <ul>
+            <li><a href="webservPage.html">Home</a></li>
+            <li><a href="formPage.html">Form</a></li>
+            <li><a href="uploadPage.html">Upload</a></li>
+            <li><a href="requestMethod.html">Request Methods</a></li>
+        </ul>
+    </nav>
     <h1>Form</h1>
     <form action="/testQuery.sh">
         <label for="name">Name:</label><br>
