--- a/pages/deletePage.html
+++ b/pages/deletePage.html
@@ -29,7 +29,7 @@ function sendDeleteRequest() {
         console.log('Success:', data);
     })
     .catch(error => {
-        console.error('There has been a problem with your fetch operation:', error);
+        console.error('There has been a problem with your delete operation:', error);
     });
 }
 </script>
