--- a/pages/patchPage.html
+++ b/pages/patchPage.html
@@ -20,10 +20,11 @@ function sendDeleteRequest() {
         },
     })
     .then(response => {
+		console.log(response);
         if (!response.ok) {
             throw new Error('Network response was not ok');
         }
-        return response.json();
+        return response;
     })
     .then(data => {
         console.log('Success:', data);
